test/types/records/tupleFields/detupleFieldDecl.good
detupleFieldDecl.chpl:10: error: de-tupling declarations are not currently supported as fields
